Bug 970363 - Fix selection moving over readonly elements in contenteditble blocks. r=roc